Update 5.4
He corregido unos ultimos errores hasta que me he encontrado un error colosal -->

Resulta que en Usuarios estaba entrelazado la Publicacion y Comentarios en contenido, cosa que no venia bien porque en el usuario solo utilizaba las Publicaciones para enseñarlas, y luego el mayor problema es que en la DataBase tenia una lista de Publicaciones a cada persona Inmutable, de forma que cuando añadia algo, me daba error, y hasta ahora no daba error porque al enseñar publicaciones de usuarios en vez de el método 'showPublicaciones()' tenia el 'showPublicacionesById(0)'. El caso es que está solucionado y la siguiente actualización será para añadir un poco de colores y se dará finalizada la primera versión de Whale